--- a/template/index.html
+++ b/template/index.html
@@ -29,17 +29,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js"></script>
 
-    <script src="http://rawgithub.com/wandoledzep/bxslider-4/master/jquery.bxslider.min.js"></script>
-    <!--<script src="http://rawgithub.com/raffone/responsive-nav.js/master/responsive-nav.js"></script>-->
+    <script src="http://cdn.jsdelivr.net/bxslider/4.1.1/jquery.bxslider.js"></script>
+    <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.js"></script>
+    <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.date.js"></script>
 
     <script src="public/rapido.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-affix.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-button.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-alert.min.js"></script>-->
-
-
-
 
   </head>
   <body id="kss-node">
