--- a/template/index.html
+++ b/template/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>kss-node Styleguide</title>
+    <title>Rapido Documentation</title>
     <meta name="description" content="" />
     <meta name="generator" content="kss-node" />
-    <link rel="stylesheet" href="public/kss.css" />
-    <link rel="stylesheet" href="public/style.css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
+
+
+    <!--<link rel="stylesheet" href="public/kss.css" />-->
+    <!--<link rel="stylesheet" href="public/style.css" />-->
+    <link rel="stylesheet" href="public/theme.css" />
+    <link rel="stylesheet" href="public/rainbow-themes/solarized-light.css" />
+
     <!--[if lt IE 9]>
     <script src="public/html5shiv.js"></script>
     <![endif]-->
@@ -28,7 +35,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js"></script>
-
     <script src="http://cdn.jsdelivr.net/bxslider/4.1.1/jquery.bxslider.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.date.js"></script>
@@ -36,12 +42,13 @@
     <script src="public/rapido.js"></script>
 
   </head>
+
   <body id="kss-node">
     <div class="kss-wrapper">
       <div class="kss-sidebar">
         <div class="kss-sidebar-inner">
           <header class="kss-header">
-            <h1 class="kss-doc-title"><a href="./">Rapido CSS</a></h1>
+            <h1 class="kss-doc-title"><a href="./"><img src="public/logo.png" alt="Rapido CSS Documentation"></a></h1>
           </header>
           <nav class="kss-nav">
             <ul class="kss-menu" data-kss-ref="{{rootNumber}}">
@@ -115,7 +122,6 @@
           {{/if}}
         </article>
         <footer class="kss-footer">
-          <div>Created using <a href="https://github.com/hughsk/kss-node">kss-node</a> and <a href="https://github.com/htanjo/kss-node-template">kss-node-template</a>.</div>
         </footer>
       </div>
     </div>
