Added font awesome support and cleaned theme

--- a/template/index.html
+++ b/template/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="" />
     <meta name="generator" content="kss-node" />
 
-    <link href='http://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
-
+    <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 
     <!--<link rel="stylesheet" href="public/kss.css" />-->
     <!--<link rel="stylesheet" href="public/style.css" />-->
     <link rel="stylesheet" href="public/theme.css" />
-    <link rel="stylesheet" href="public/rainbow-themes/solarized-light.css" />
+    <link rel="stylesheet" href="public/rainbow-themes/github.css" />
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="public/html5shiv.js"></script>
@@ -31,10 +31,10 @@
 
     <script src="public/main.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.pack.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/jquery.fancybox.pack.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-buttons.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js"></script>
     <script src="http://cdn.jsdelivr.net/bxslider/4.1.1/jquery.bxslider.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.js"></script>
     <script src="http://cdn.jsdelivr.net/jquery.pickadate.js/3.1.4/picker.date.js"></script>
