--- a/template/public/theme.sass
+++ b/template/public/theme.sass
@@ -2,11 +2,13 @@
 
 //$base-font-family:
 
+$font-mono: 'PT Mono', Monaco, Menlo, Consolas, "Courier New", monospace
+
 @import '../../frameworks/rapido/stylesheets/rapido.scss'
 
 $main-color: #65778c
 $secondary-color: #5fceea
-$third-color: #5fbb14
+$third-color: #488d0f
 $background-color: #f6f6f6
 
 body
@@ -24,18 +26,21 @@ html, body
 // ----------------------------------------------------------------------------
 
 .kss-sidebar
+  +adjust-font-size-to($small-size)
   +position(absolute, 0 null 0 0)
-  width: 200px
+  font-family: $font-mono
   overflow: auto
-  padding: rhythm(.5)
+  padding: rhythm(1) rhythm(.5) rhythm(.5)
   text-align: left
+  width: 200px
 
   .kss-doc-title
-    +adjust-font-size-to($base-font-size)
+    //+adjust-font-size-to($base-font-size)
     margin-bottom: rhythm(1)
+    text-align: center
 
     a
-      padding: 0 0 0 rhythm(.5)
+      padding: 0
 
   a
     color: $main-color
@@ -78,7 +83,7 @@ html, body
 
     .kss-menu-child
       background: $background-color
-      +adjust-font-size-to($small-size)
+      //+adjust-font-size-to($small-size)
 
       li:first-child
         padding-top: rhythm(.25)
@@ -99,83 +104,67 @@ html, body
 .kss-overview h3,
 .kss-overview h4,
 .kss-title
-  font-family: 'Maven Pro', sans-serif
+  font-family: $font-mono
+  //font-family: 'Maven Pro', sans-serif
+  color: $secondary-color
+
+.kss-depth-2 .kss-title,
+.kss-depth-3 .kss-title
+  +adjust-font-size-to($h5-size)
+  color: $text-color
+  padding: .75em 0
+  border-top: 3px solid $secondary-color
+  border-bottom: 1px solid darken($background-color, 10)
+  margin-bottom: rhythm(1)
 
 .kss-content
   +position(absolute, 0 0 0 200px)
-  background: $background-color
+  //background: $background-color
   overflow: auto
-  padding: rhythm()
-  //+inset-shadow(left, 5px, rgba(#65777c, .1))
-
+  padding: rhythm(1)
 
 .kss-section
   +e(transition)
-  //+box-shadow(0 2px 10px rgba(#65778c, .1))
-  //border-top-width: rhythm(.15)
-  background: #fff
-  border: 1px solid darken($background-color, 10)
-  border-bottom-width: 0px
-  margin: 0 auto
   max-width: 1000px
-  padding: rhythm()
   position: relative
+  margin-bottom: rhythm(2)
 
-  &:last-child
-    border-bottom-width: 1px
+.kss-title .kss-ref
+  +opacity(.5)
+  color: $main-color
+  float: right
+  font-family: $base-font-family
 
-
-  &:hover
-    //border-color:  $secondary-color
-    //+box-shadow(0 2px 10px rgba(#65778c, .2))
-    //position: relative
-    //z-index: 2
-
-    //.kss-title .kss-ref
-      //background:   $secondary-color
-
-.kss-title
-  //padding-top: rhythm(1, $h1-size)
-
-
-  .kss-ref
-    +opacity(.5)
-    //+adjust-font-size-to($small-size, $from-size: $h1-size)
-    //+e(transition)
-    //+position(absolute, 0  null null 0)
-    //background: darken($background-color, 10)
-    //color: #fff
-    //padding: rhythm(.10) rhythm(1.15)
-    float: right
-    font-family: $base-font-family
+  .kss-depth-1 &
     font-size: em($small-size, $h1-size)
 
-// ----------------------------------------------------------------------------
+  .kss-depth-2 &,
+  .kss-depth-3 &
+    font-size: em($small-size, $h5-size)
+
 
 .kss-modifier-block
-  padding-top: rhythm()
-  border-top: 1px solid darken($background-color, 10)
 
-.kss-modifier-head
-  margin-bottom: rhythm()
-  background: $background-color
-  border-top: 1px solid darken($background-color, 10)
+  .kss-modifier-head
+    margin-bottom: rhythm()
+    background: $background-color
+    border-top: 1px solid darken($background-color, 10)
 
-  > *
-    +adjust-font-size-to($small-size)
-    +inline-block()
-    padding: rhythm(.25) rhythm(.5)
+    > *
+      +adjust-font-size-to($small-size)
+      +inline-block()
+      padding: rhythm(.25) rhythm(.5)
 
-.kss-modifier-name
-  font-weight: bold
+  .kss-modifier-name
+    font-weight: bold
 
-.kss-modifier-description
-  color: #999
-  p
-    margin: 0
+  .kss-modifier-description
+    color: #999
+    p
+      margin: 0
 
-  p code
-    background: #fff
+    p code
+      background: #fff
 
 .kss-modifier-example
   +clearfix()
@@ -187,7 +176,8 @@ html, body
   font-weight: normal
   color: inherit
 
-p code
+p code,
+li code
   color: $third-color
   background: $background-color
   padding: .2em .3em
