--- a/template/index.html
+++ b/template/index.html
@@ -51,7 +51,7 @@
             <h1 class="kss-doc-title"><a href="./"><img src="public/logo.png" alt="Rapido CSS Documentation"></a></h1>
           </header>
           <nav class="kss-nav">
-            <ul class="kss-menu" data-kss-ref="{{rootNumber}}">
+            <ul class="kss-menu" data-kss-ref="{{rootName}}">
               <li class="kss-menu-item"><a href="./"><span class="kss-ref">0</span><span class="kss-name">Overview</span></a></li>
               {{#eachRoot}}
               <li class="kss-menu-item"><a href="section-{{reference}}.html"><span class="kss-ref">{{reference}}</span><span class="kss-name">{{header}}</span></a></li>
@@ -60,11 +60,11 @@
             {{#if overview}}
             {{else}}
             <ul class="kss-menu-child">
-              {{#eachSection rootNumber}}
-              {{#whenDepth 1}}
+              {{#eachSection rootName}}
+              {{#ifDepth 1}}
               {{else}}
               <li class="kss-menu-item"><a href="#section-{{reference}}"><span class="kss-ref">{{reference}}</span><span class="kss-name">{{header}}</span></a></li>
-              {{/whenDepth}}
+              {{/ifDepth}}
               {{/eachSection}}
             </ul>
             {{/if}}
@@ -73,50 +73,73 @@
       </div>
       <div class="kss-content">
         <article class="kss-article">
-          {{#if overview}}
+
+          {{#if homepage}}
+
           <section id="section-0" class="kss-section kss-overview">
-            {{html overview}}
+            {{{homepage}}}
           </section>
+
           {{else}}
-          {{#eachSection rootNumber}}
-          <section id="section-{{reference}}" class="kss-section kss-depth-{{refDepth}}">
-            <h1 class="kss-title"><span class="kss-ref">{{reference}}</span> {{header}}</h1>
-            {{#ifAny markup modifiers}}
-            {{#if description}}
-            <div class="kss-description">
-              {{html description}}
-            </div>
+
+          {{#eachSection rootName}}
+          <section id="section-{{reference}}" class="kss-section kss-depth-{{depth}}">
+            <h{{depth}} class="kss-title">
+              <span class="kss-ref">
+                {{#ifNumeric reference}}
+                  {{reference}}
+                {{else}}
+                  {{autoincrement}}
+                {{/ifNumeric}}
+              </span>
+              {{header}}
+            </h{{depth}}>
+
+            {{#if parameters}}
+              <ul class="kss-parameters">
+              {{#eachParameter}}
+                <li class="kss-parameters__item">
+                  <code class="kss-parameters__name">{{name}}</code>
+                  <div class="kss-parameters__description">{{{description}}}</div>
+                </li>
+              {{/eachParameter}}
+              </ul>
             {{/if}}
-            <div class="kss-modifier-block">
-              <div class="kss-modifier kss-modifier-original">
-                <div class="kss-modifier-example">
-                  {{modifierMarkup}}
-                </div>
+
+            {{#if description}}
+              <div class="kss-description">
+                {{{description}}}
               </div>
-              {{#eachModifier}}
-              <div class="kss-modifier">
-                <div class="kss-modifier-head">
-                  <div class="kss-modifier-name">{{name}}</div>
-                  <div class="kss-modifier-description">
-                    {{html description}}
+            {{/if}}
+
+            {{#if markup}}
+              <div class="kss-modifier-block">
+                <div class="kss-modifier kss-modifier-original">
+                  <div class="kss-modifier-example">
+                    {{{markup}}}
                   </div>
                 </div>
-                <div class="kss-modifier-example">
-                  {{modifierMarkup}}
+
+                {{#eachModifier}}
+                <div class="kss-modifier">
+                  <div class="kss-modifier-head">
+                    <div class="kss-modifier-name">{{name}}</div>
+                    <div class="kss-modifier-description">
+                      {{{description}}}
+                    </div>
+                  </div>
+                  <div class="kss-modifier-example">
+                    {{{markup}}}
+                  </div>
+                </div>
+                {{/eachModifier}}
+
+                <div class="kss-markup">
+                  <pre><code data-language="html">{{markup}}</code></pre>
                 </div>
               </div>
-              {{/eachModifier}}
-              <div class="kss-markup">
-                <pre><code data-language="html">{{markup}}</code></pre>
-              </div>
-            </div>
-            {{else}}
-            {{#if description}}
-            <div class="kss-description">
-              {{html description}}
-            </div>
             {{/if}}
-            {{/ifAny}}
+
           </section>
           {{/eachSection}}
           {{/if}}
